--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/emtlabEmt
+spring.datasource.url=jdbc:postgresql://localhost:5432/emtLab1
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
